--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -5,7 +5,7 @@ author: "Oliver Greenwald, Karam Oubari, Steven Powell, Emely Gutierrez"
 output: pdf_document
 ---
 
-## Synoposis
+## Synopsis
 This research project is aimed to further understand and analyze American prison
 incarceration and crime in the 50 states between 2001 and 2016. Analysis was 
 done by focusing specifically on state prisoners (as opposed to federal) and the
@@ -30,8 +30,9 @@ the world’s population, and yet it houses 25% of the world’s incarcerated
 persons.
 
 In this project we aim to understand the extent of the issue of mass 
-incarceration, what sub-statistics can most explain the issue, and how the 
-numbers connect to public policy.
+incarceration, what sub-statistics can most explain the issue, how the 
+numbers connect to public policy, and the future of the issue through basic
+predictive modeling.
 
 ### Data Description
 “The Bureau of Justice Statistics administers the National Prisoners Statistics 
@@ -313,7 +314,9 @@ crime_rape <- crime_rape %>%
 (We can definitely use the linear regression methods we learned in the last
 unit here. Let's discuss this when we meet.)
 
-### Are the increasing incarceration numbers due to increasing crime rates? 
+### Understanding the extent of the issue of mass incarceration:
+
+Are the increasing incarceration numbers due to increasing crime rates? 
 
 Political rhetoric that has come to the forefront in recent decades is the idea 
 of law and order, being tough on crime, and ensuring punishment to the fullest 
@@ -344,7 +347,9 @@ increasing, if the crime rate is staying the same, or decreasing as we observed
 previously, there is still no valid reason to incarcerate more people.
 
 
-### How does crime differ for different regions of the US?
+### Sub-statistics that can most explain the issue:
+
+How does crime differ for different regions of the US?
 
 Figure 5: \newline
 To see how crime differs by region, we made a variable called `region` which 
@@ -382,7 +387,10 @@ to not choose the south, although they are on a decline in property crimes
 committed. 
 
 
-### How does policy impact incarceration? This will be explored through the lens of hanging definition of rape.
+### How the results and the issue connect to non-statistical public policy
+
+How does policy impact incarceration? This will be explored through the lens of 
+changing definition of rape.
 
 Figure 6: \newline
 In 2012 the FBI changed their definition of rape from:
@@ -403,131 +411,12 @@ determine if this is a correlation relationship or a causal relationship.
 This one change in policy had obvious impacts on the number of people incarcerated for the crime. While it is only a small example, it supports theories on incarceration that emphasize the role of laws and policies on the number of people incarcerated rather than the actual number of crimes committed. This is assuming a causal relationship between the policy change and the number of people incarcerated.
 The creation and enforcement of policy has a greater impact on who is incarcerated and how many people are incarcerated for each crime than the actual rate of crime. Despite public perception assuming the opposite relationship. Many times the policies can be used to adjust a narrative to support a political movement or idea at the time. Crime rates can increase when policy is adjusted to include more crime as seen with the change in defintion for rape. This is not to say that this change contributed significantly to mass incarceration or that the change in definition was unjust. Rather, this example in our data exemplifies the impact of policies on incarceration rather than crime rate.
 
+
+### Future of the issue through basic predictive modeling:
+
+Talk about it here...
+
 \newpage
-
-```{r creating-proportion-variables, eval = FALSE, echo = FALSE}
-crime_props <- crime %>%
-  filter(jurisdiction != "FEDERAL") %>%
-  mutate(violent_crime_total_prop = (violent_crime_total / prisoner_count)) %>%
-  mutate(rape_legacy_prop = (rape_legacy / prisoner_count)) %>%
-  mutate(murder_manslaughter_prop = (murder_manslaughter / prisoner_count)) %>%
-  mutate(rape_revised_prop = (rape_revised / prisoner_count)) %>%
-  mutate(robbery_prop = (robbery / prisoner_count)) %>%
-  mutate(agg_asssault_prop = (agg_assault / prisoner_count)) %>%
-  mutate(property_crime_total_prop = 
-           (property_crime_total / prisoner_count)) %>%
-  mutate(burglary_prop = (burglary / prisoner_count)) %>%
-  mutate(larceny_prop = (larceny / prisoner_count)) %>%
-  mutate(vehicle_theft_prop = (vehicle_theft / prisoner_count))
- 
-crime_props <- crime_props %>%
-  group_by(year) %>%
-  mutate(total_rape_legacy_prop = 
-           (sum(rape_legacy_prop)/sum(prisoner_count))) %>%
-  mutate(total_murder_manslaughter_prop = 
-           (sum(murder_manslaughter_prop)/sum(prisoner_count))) %>%
-  mutate(total_rape_revised_prop = 
-           (sum(rape_revised_prop)/sum(prisoner_count))) %>%
-  mutate(total_robbery_prop = (sum(robbery_prop)/sum(prisoner_count))) %>%
-  mutate(total_agg_assault_prop = 
-           (sum(agg_asssault_prop)/sum(prisoner_count))) %>%
-  mutate(total_burglary_prop = (sum(burglary_prop)/sum(prisoner_count))) %>%
-  mutate(total_larceny_prop = (sum(larceny_prop)/sum(prisoner_count))) %>%
-  mutate(total_vehicle_theft_prop = 
-           (sum(vehicle_theft_prop)/sum(prisoner_count))) %>%
-  mutate(total_violent_crime_total = 
-           (sum(violent_crime_total_prop)/sum(prisoner_count))) %>%
-  mutate(total_property_crime_total = 
-           (sum(property_crime_total_prop)/sum(prisoner_count)))
- 
-```
- 
- 
-```{r proportion-of-crimes-including-larcency, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
-ggplot(data = crime_props, mapping = aes(x = year)) +
-  geom_line(aes(y = total_rape_legacy_prop), color = "red", 
-            linetype="twodash") +
-  geom_line(aes(y = total_murder_manslaughter_prop), color = "blue", 
-            linetype="twodash") +
-  geom_line(aes(y = total_rape_revised_prop), color = "green", 
-            linetype="twodash") +
-  geom_line(aes(y = total_robbery_prop), color = "yellow", 
-            linetype="twodash") +
-  geom_line(aes(y = total_agg_assault_prop), color = "purple", 
-            linetype="twodash") +
-  geom_line(aes(y = total_burglary_prop), color = "pink") +
-  geom_line(aes(y = total_larceny_prop), color = "orange") +
-  geom_line(aes(y = total_vehicle_theft_prop), color = "magenta")
-  labs(title = "",
-     x = "Year",
-     y = "Proportion of prisoners convicted of each crime
-            (not including federal incarcerated people)",
-     caption = "Red = Proportion of Rape by legacy definiton
-                Blue = Proportion of murder/manslaughter
-                Green = Proportion of Rape by revised definition
-                Yellow = Proportion of robbery
-                Purple = Proportion of aggravated assault
-                Pink = Proportion of burglary
-                Orange = Proportion of larceny
-                Magenta = Proportion of vehicle theft")
-```
-
-<!-- How do trends in different crimes compare to each other? Do they move 
-together or do they change individually? -->
-
-
-```{r fitted-model, eval = FALSE, echo = FALSE}
-
-violent_crime_total_model <- lm(violent_crime_total ~ year, 
-                                data = totals_by_year)
-tidy(violent_crime_total_model)
-
-
-robbery_model <- lm(robbery ~ year, data = totals_by_year)
-tidy(robbery_model)
-
-
-agg_assault_model <- lm(agg_assault ~ year, data = totals_by_year)
-tidy(agg_assault_model)
-
-
-property_crime_total_model <- lm(property_crime_total ~ year, 
-                                 data = totals_by_year)
-tidy(property_crime_total_model)
-
-
-burglary_model <- lm(burglary ~ year, data = totals_by_year)
-tidy(burglary_model)
-
-
-larceny_model <- lm(larceny ~ year, data = totals_by_year)
-tidy(larceny_model)
-
-
-vehicle_theft_model <- lm(vehicle_theft ~ year, data = totals_by_year)
-tidy(vehicle_theft_model)
-
-```
-
-<!-- Here we attempted to answer whether different types of crime change together -->
-<!-- over the years or if different crimes fluctuate in different years. We used  -->
-<!-- data from the variables `violent_crime_total`, `robbery`, `agg_assault`, -->
-<!-- `property_crime_total`, `burglary`, `larceny`, and `vehicle_theft`. -->
-
-<!-- After attempting to compare the shapes of the crime vs. year graphs all together, -->
-<!-- we found that the incredibly different scales make this task impossible to do -->
-<!-- on a single graph. We then graphed these different crimes on different graphs -->
-<!-- with linear models, making it easier to compare shape but still difficult to  -->
-<!-- make objective claims about this data. One notable feature we noticed was that -->
-<!-- there was a peak for many crimes between 2004 and 2008. We plan to research  -->
-<!-- further to find possible causations for these trends. -->
-
-
-<!-- Last, we created linear models for each crime to see how they each changed -->
-<!-- between 2001 and 2016. Notice, all of these 7 crimes have a negative slope -->
-<!-- meaning they overall decreased during this time period. The slopes vary in  -->
-<!-- magnitude from about -7000 crimes/year to about -180,000 crimes/year. -->
-
 
 ## Discussion
 
