--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -199,7 +199,7 @@ crime <- crime %>%
   x = "Year", y = "Count")
 ```
 
-```{r percent-pop, echo = FALSE}
+```{r percent-pop-linegraph, echo = FALSE}
 crime <- crime %>%
   group_by(year)%>%
   mutate(percent_pop_us = 100 * sum(prisoner_count)/sum(state_population))
@@ -212,6 +212,17 @@ crime <- crime %>%
        subtitle = "between 2001 and 2016",
        x = "Year", 
        y = "Percent")
+```
+```{r percent-pop-boxplot}
+crime<- crime %>%
+ group_by(jurisdiction)%>%
+  mutate(percent_state_pop= 100*(prisoner_count/state_population))
+ crime %>% 
+  ggplot(crime, mapping= aes(x=as.factor(year), y= percent_state_pop))+
+  geom_boxplot()+
+  labs(title = "Percent State Population Incarcerated",
+  x = "Year", y= "Percent Population Incarcerated") +
+  theme_linedraw()
 ```
 
 ```{r prisoner-prop-map, echo = FALSE}
@@ -338,6 +349,44 @@ crime_rape <- crime_rape %>%
                       
                 Blue = Total Number of Prisoners convicted of rape
                         by the Revised Definition in state custody")
+```
+```{r policy-colorado}
+crime<- crime %>%
+ filter(jurisdiction == "COLORADO")%>%
+  mutate(percent_col_pop= 100*(prisoner_count/state_population))
+  
+ crime %>% 
+  ggplot(crime, mapping= aes(x=year, y= percent_col_pop))+
+  geom_line()+
+  labs(title = "Percent Colorado State Population Incarcerated",
+  x = "Year", y= "Percent Population Incarcerated") +
+  theme_linedraw()
+```
+
+```{r policy-vermont}
+crime<- crime %>%
+ filter(jurisdiction == "VERMONT")%>%
+  mutate(percent_ver_pop= 100*(prisoner_count/state_population))
+  
+ crime %>% 
+  ggplot(crime, mapping= aes(x=year, y= percent_ver_pop))+
+  geom_line()+
+  labs(title = "Percent Vermont State Population Incarcerated",
+  x = "Year", y= "Percent Population Incarcerated") +
+  theme_linedraw()
+```
+
+```{r policy-washington}
+crime<- crime %>%
+ filter(jurisdiction == "WASHINGTON")%>%
+  mutate(percent_was_pop= 100*(prisoner_count/state_population))
+  
+ crime %>% 
+  ggplot(crime, mapping= aes(x=year, y= percent_was_pop))+
+  geom_line()+
+  labs(title = "Percent Washington State Population Incarcerated",
+  x = "Year", y= "Percent Population Incarcerated") +
+  theme_linedraw()
 ```
 \newpage
 
